# ghost-convert

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  dprint.json  main.cpp  mise.toml
apps/: CMakeLists.txt
apps/cli/: cli.cpp  cli.hpp
apps/tui/: tui.cpp  tui.hpp
cmake/: options.cmake
lib/: CMakeLists.txt  ghost_convert.cpp  ghost_convert_cli.cpp  ghost_convert_cli.hpp
lib/ghost_convert/: CMakeLists.txt  errors.hpp
lib/ghost_convert/file_finder/: file_finder.cpp  file_finder.hpp  file_finder_test.cpp
test/: CMakeLists.txt
test/file_finder/: file_finder_test.cpp
tests/: CMakeLists.txt
